--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
   </thead>
   <tbody>
     <tr id="invoice-lines">
-      <td>REPLACE this with data binding for product description</td>
+      <td>{{product}}</td>
       <td>REPLACE this with data binding for price inclusive VAT</td>
       <td>REPLACE this with data binding for price exclusive VAT</td>
       <td>&nbsp;</td>
